src/test/deca/context/valid/personalTests/testContextObjetSimple.deca
// Test la declaration d'un objet

class A {
    int a;
}

{
    A a;
    a = new A();
    println("ok");
}