src/test/deca/context/invalid/personalTests/testMethod.deca
class A{
    int a = 0;

    void b(){
        println("A");
    }
}

class B extends A{
    int b = 0;
}

{
   A a = new A();
   B b = new B();
}